# prose-pod-api

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Prose.toml  README.md  Rocket.toml  Taskfile.dist.yaml  Taskfile.yaml  prose.lic  rustfmt.toml
config/: Cargo.toml
config/src/: defaults.rs  lib.rs  model.rs
crates/prosody-config/: Cargo.toml
crates/prosody-config/src/: lib.rs
crates/prosody-config/src/model/: secrets.rs  units.rs  xmpp.rs
crates/prosody-config/src/prosody_config/: conversion.rs  mod.rs
crates/prosody-config/src/prosody_config_file/: mod.rs
crates/prosody-config/tests/: prosody_config.rs
crates/prosody-config/tests/snapshots/: prosody_config__prose_default_config.snap  prosody_config_file__prose_default_config.snap
crates/rest-api/: Cargo.toml
crates/rest-api/src/: error.rs  lib.rs  main.rs
crates/rest-api/src/error/: errors.rs  mod.rs
crates/rest-api/src/features/: mod.rs  version.rs
crates/rest-api/src/forms/: duration.rs  interval.rs  jid.rs  mod.rs  multi_value_items.rs  pagination.rs  qs_query.rs  strict_qs_query.rs  timestamp.rs
crates/rest-api/src/guards/: app_config.rs  member_service.rs  mod.rs  notification_service.rs  notifier.rs  pod_network_config.rs  secrets_store.rs  server_config.rs  server_ctl.rs  server_manager.rs  unauthenticated_member_service.rs  unauthenticated_server_manager.rs  unauthenticated_user_service.rs  user_service.rs  util.rs  uuid_generator.rs  workspace.rs  workspace_controller.rs  xmpp_service.rs
crates/rest-api/src/models/: mod.rs
crates/rest-api/src/responders/: created.rs  either.rs  mod.rs  paginated.rs
crates/rest-api/src/util/: content_type_or.rs  database.rs  error_catcher.rs  mod.rs  tracing_subscriber_ext.rs
crates/rest-api/static/api-docs/: openapi.json  openapi.yaml  redocly.cfg.yaml  shared.json  shared.yaml
crates/rest-api/tests/: Prose.toml  behavior.rs
crates/rest-api/tests/cucumber_parameters/: dns_record_type.rs  http_status.rs  invitations.rs  jid.rs  member_role.rs  mod.rs  state_verb.rs
crates/rest-api/tests/features/: auth.rs  delete-member.feature  dns-setup.feature  dns_setup.rs  init.rs  invitations.rs  members-list.feature  members.rs  mod.rs  network_checks.rs  pod_config.rs  profiles.rs  roles.rs  server_config.rs  workspace-icon.feature  workspace-invitation.feature  workspace_details.rs
crates/rest-api/tests/integration/: Rocket-test.toml  cleanup  in-memory.env
crates/rest-api/tests/prelude/: database.rs  mock_auth_service.rs  mock_network_checker.rs  mock_notifier.rs  mock_secrets_store.rs  mock_server_ctl.rs  mock_xmpp_service.rs  mod.rs  notifier.rs  steps.rs  test_api.rs  test_world.rs  util.rs
crates/rest-api/tests/v1/: init.rs  mod.rs
crates/service/: Cargo.toml
crates/service/src/: errors.rs  lib.rs  util.rs
crates/service/src/config/: defaults.rs
crates/service/src/controllers/: member_controller.rs  mod.rs  workspace_controller.rs
crates/service/src/dependencies/: mod.rs  uuid.rs
crates/service/src/entity/: member.rs  mod.rs  (+2 more)
crates/service/tests/: Prose.toml  behavior.rs
entity/: Cargo.toml
entity/src/: lib.rs  member.rs  member_invite.rs  notification.rs  prelude.rs  server_config.rs  settings.rs  workspace.rs  workspace_invitation.rs
entity/src/model/: invitations.rs  member_invite.rs  members.rs  mod.rs  server_config.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231221_172027_create_server_config.rs  m20231221_172027_create_settings.rs  m20240220_171150_create_member.rs  m20240320_095326_create_member_invite.rs  m20240320_095326_create_workspace_invitation.rs  m20240506_080027_create_workspace.rs  m20240830_080808_create_pod_config.rs
playgrounds/app-config/: Cargo.toml  main.rs
playgrounds/cucumber-rs-span-logging/: Cargo.toml
playgrounds/cucumber-rs-span-logging/tests/: behavior.rs  example.feature
playgrounds/dns-caching/: Cargo.toml  main.rs
playgrounds/dns-caching/src/: main.rs
playgrounds/tokio-debounce/: Cargo.toml  main.rs
service/: Cargo.toml
service/src/: auth_service.rs  avatar_metadata.rs  jwt_service.rs  lib.rs  model.rs  mutation.rs  mutation_error.rs  query.rs  server_ctl.rs  util.rs
service/src/config/: defaults.rs  mod.rs
service/src/controllers/: init_controller.rs  invitation_controller.rs  member_controller.rs  mod.rs  server_config_controller.rs  workspace_controller.rs
service/src/dependencies/: mod.rs  notifier.rs  stanza_id_provider.rs  uuid.rs
service/src/entity/: mod.rs  pod_config.rs  server_config.rs  workspace.rs
service/src/model/: dns.rs  durations.rs  email_address.rs  invitations.rs  jid.rs  jid_node.rs  members.rs  mod.rs  pod_address.rs  pod_config.rs  pod_network_config.rs  server_config.rs  service_secrets_store.rs  xmpp.rs
service/src/notifier/: README.md  email.rs  generic.rs  mod.rs
service/src/prosody/: mod.rs  prosody_admin_rest.rs  prosody_config_from_db.rs  prosody_ctl.rs  prosody_oauth2.rs  prosody_rest.rs
service/src/repositories/: invitation_repository.rs  member_repository.rs  mod.rs  notification_repository.rs  pod_config_repository.rs  server_config_repository.rs  workspace_repository.rs
service/src/services/: auth_service.rs  invitation_service.rs  jwt_service.rs  mod.rs  notifier.rs  server_ctl.rs  server_manager.rs  user_service.rs  xmpp_service.rs
service/src/xmpp/: live_xmpp_service.rs  mod.rs  nonstandard_xmpp_client.rs  stanza_sender.rs  user_account_service.rs  xmpp_service.rs
service/tests/: behavior.rs  cucumber.rs  mock.rs  prepare.rs
service/tests/prosody/: mod.rs
src/prosody-config/: CONTRIBUTING.md  Cargo.toml
src/prosody-config/src/: lib.rs  util.rs
src/prosody-config/tests/: prosody_config.rs  prosody_config_file.rs  serde.rs
src/rest-api/: Cargo.toml
src/rest-api/src/: lib.rs  main.rs
src/rest-api/tests/: Prose.toml  behavior.rs  prose.toml
src/service/: Cargo.toml
src/service/src/: errors.rs  lib.rs  migrations.rs
src/service/tests/: Prose.toml  behavior.rs  prose.toml
(+1477 files in other folders)
