[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-pod-api"
repository = "https://github.com/prose-im/prose-pod-api.git"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
cucumber = "0.21"
email_address = "0.2"
figment = { version = "0.10", features = ["env", "toml"] }
form_urlencoded = "1"
futures = "0.3"
futures-util = { version = "0.3" }
hickory-proto = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
    "serde-config",
] }
hickory-resolver = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
] }
hmac = "0.12"
http-auth-basic = "0.3"
insta = "1"
iso8601-duration = { version = "0.2", features = ["serde"] }
iso8601-timestamp = "0.3"
lazy_static = "1"
lettre = { version = "0.11", features = [
    "smtp-transport",
    "rustls-tls",
    "hostname",
    "builder",
], default-features = false }
linked-hash-map = "0.5"
linked_hash_set = "0.1"
migration = { path = "crates/migration" }
mime = "0.3"
parking_lot = "0.12"
prosody-config = { path = "crates/prosody-config" }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
    "json",
    "trust-dns",
], default-features = false }
rocket = { version = "0.5", features = ["json"] }
sea-orm = { version = "1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    #"macros",
] }
sea-orm-migration = { version = "1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-rocket = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
service = { path = "crates/service" }
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["rt"] }
tokio-util = "0.7"
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
url_serde = "0.2"
urlencoding = "2"
uuid = "1"

# `prose-xmpp` and its dependencies.
# NOTE: See <https://github.com/prose-im/prose-core-client/blob/master/Cargo.toml>
#   for up-to-date versions (make sure to switch to the appropriate tag).
prose-xmpp = { git = "https://github.com/prose-im/prose-core-client.git", tag = "0.1.99" }
jid = { version = "0.11", default-features = false }
minidom = "0.16"
xmpp-parsers = "0.21"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
strip = "debuginfo"

[profile.staging]
inherits = "dev"
opt-level = 1
lto = "thin"

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
