[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/prose-im/prose-pod-api"
repository = "https://github.com/prose-im/prose-pod-api.git"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.7", default-features = false }
axum-extra = { version = "0.9", default-features = false }
axum-test = { version = "16", default-features = false }
base64 = { version = "0.22", default-features = false }
chrono = { version = "0.4", default-features = false }
cucumber = { version = "0.21", default-features = false }
email_address = { version = "0.2", default-features = false }
figment = { version = "0.10", default-features = false }
form_urlencoded = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
hickory-proto = { version = "0.24", default-features = false }
hickory-resolver = { version = "0.24", default-features = false }
hmac = { version = "0.12", default-features = false }
http-auth-basic = { version = "0.3", default-features = false }
insta = { version = "1", default-features = false }
iso8601-duration = { version = "0.2", default-features = false }
iso8601-timestamp = { version = "0.3", default-features = false }
lazy_static = { version = "1", default-features = false }
lettre = { version = "0.11", default-features = false }
linked-hash-map = { version = "0.5", default-features = false }
linked_hash_set = { version = "0.1", default-features = false }
mime = { version = "0.3", default-features = false }
parking_lot = { version = "0.12", default-features = false }
prosody-config = { path = "crates/prosody-config" }
rand = { version = "0.8", default-features = false }
regex = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false }
sea-orm = { version = "1", default-features = false }
sea-orm-migration = { version = "1", default-features = false }
secrecy = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3", default-features = false }
service = { path = "crates/service" }
strum = { version = "0.26", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
url_serde = { version = "0.2", default-features = false }
urlencoding = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }

# `prose-xmpp` and its dependencies.
# NOTE: See <https://github.com/prose-im/prose-core-client/blob/master/Cargo.toml>
#   for up-to-date versions (make sure to switch to the appropriate tag).
prose-xmpp = { git = "https://github.com/prose-im/prose-core-client.git", tag = "0.1.99", default-features = false }
jid = { version = "0.11", default-features = false }
minidom = { version = "0.16", default-features = false }
xmpp-parsers = { version = "0.21", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
strip = "debuginfo"

[profile.staging]
inherits = "dev"
opt-level = 1
lto = "thin"

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
