[package]
name = "prose-pod-config"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
figment = { workspace = true }
jid = { workspace = true }
prose-xmpp = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
url_serde = { workspace = true }
