[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"

[dependencies]
email_address = { workspace = true }
iso8601-duration = { workspace = true }
rocket = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
