[package]
name = "entity"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }

[dependencies]
email_address = { workspace = true }
iso8601-duration = { workspace = true }
jid = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
