[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
chrono = "0.4"
entity = { path = "../entity" }
figment = { version = "0.10", features = ["toml"] }
lettre = { version = "0.11", features = [
    "smtp-transport",
    "rustls-tls",
    "hostname",
    "builder",
], default-features = false }
log = { version = "0.4", features = ["std"] }
prosody-config = { path = "../prosody-config" }
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
    "json",
    "trust-dns",
], default-features = false }
sea-orm = { version = "1.0.0-rc.3", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    #"macros",
] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
# https://github.com/launchbadge/sqlx/issues/3189
# https://github.com/launchbadge/sqlx/pull/3190
time = "=0.3.34"
tokio = "1"
urlencoding = "2"
url_serde = "0.2"
uuid = { version = "1", features = ["v4"] }
vcard_parser = "0.2"

[dev-dependencies]
cucumber = "0.21"
insta = "1"
migration = { path = "../migration" }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]

[[test]]
name = "cucumber"
harness = false
