[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
entity = { path = "../entity" }
figment = { version = "0.10", features = ["toml"] }
form_urlencoded = "1"
hmac = "0.12"
jwt = "0.16"
lettre = { version = "0.11", features = [
    "smtp-transport",
    "rustls-tls",
    "hostname",
    "builder",
], default-features = false }
log = { version = "0.4", features = ["std"] }
minidom = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main" }
parking_lot = "0.12"
prose-xmpp = { git = "https://github.com/prose-im/prose-core-client.git", branch = "master" }
prosody-config = { path = "../prosody-config" }
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
    "json",
    "trust-dns",
], default-features = false }
sea-orm = { version = "1.0.0-rc.4", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    #"macros",
] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = "1"
urlencoding = "2"
url_serde = "0.2"
uuid = { version = "1", features = ["v4"] }
xmpp-parsers = { git = "https://gitlab.com/nesium/xmpp-rs", branch = "main" }

[dev-dependencies]
cucumber = "0.21"
insta = "1"
migration = { path = "../migration" }

[[test]]
name = "behavior"
harness = false
