[package]
name = "service"
version = "0.1.0"
edition = "2021"
publish = false
license = "MPL-2.0"
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
entity = { workspace = true }
figment = { workspace = true }
form_urlencoded = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
lettre = { workspace = true }
log = { workspace = true }
minidom = { workspace = true }
parking_lot = { workspace = true }
prose-xmpp = { workspace = true }
prosody-config = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url_serde = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xmpp-parsers = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
insta = { workspace = true }
migration = { workspace = true }

[[test]]
name = "behavior"
harness = false
