[package]
name = "prosody-config"
version = "0.1.0"
edition = "2021"
description = "Generate Prosody configuration files from type-safe Rust data structures."
readme = "README.md"
license = "MPL-2.0"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
linked-hash-map = "0.5"
linked_hash_set = "0.1"

[dev-dependencies]
insta = "1"
