[package]
name = "prosody-config"
version = "0.1.0"
edition = "2021"
description = "Generate Prosody configuration files from type-safe Rust data structures."
readme = "README.md"
license = "MPL-2.0"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
linked-hash-map = { version = "0.5", default-features = false }
linked_hash_set = { version = "0.1", default-features = false }
secrecy = { version = "0.10", default-features = false }

[dev-dependencies]
insta = { version = "1", default-features = false }
