[package]
name = "prose-pod-api"
version = { workspace = true }
description = "Prose Pod API server."
readme = "README.md"
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false
authors = [
    "Valerian Saliou <valerian@valeriansaliou.name>",
    "Rémi Bardon <remi@remibardon.name>",
]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["cookie"] }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
http-auth-basic = { workspace = true }
iso8601-duration = { workspace = true }
iso8601-timestamp = { workspace = true }
lazy_static = { workspace = true }
rocket = { workspace = true, features = ["http2", "json"] }
sea-orm-rocket = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
service = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true, features = ["macros", "tracing"] }
hickory-proto = { workspace = true }
linked-hash-map = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

[[bin]]
name = "prose-pod-api"
path = "src/main.rs"
doc = false

[lib]
name = "prose_pod_api"
path = "src/lib.rs"

[[test]]
name = "behavior"
harness = false
