[package]
name = "service"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
email_address = { workspace = true }
figment = { workspace = true }
form_urlencoded = { workspace = true }
linked_hash_set = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
hmac = { workspace = true }
iso8601-duration = { workspace = true }
jid = { workspace = true }
lazy_static = { workspace = true }
lettre = { workspace = true }
minidom = { workspace = true }
parking_lot = { workspace = true }
prose-xmpp = { workspace = true }
prosody-config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url_serde = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xmpp-parsers = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
insta = { workspace = true }
migration = { workspace = true }

[[test]]
name = "behavior"
harness = false
