[package]
name = "app-config"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.19", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[[bin]]
name = "app-config"
path = "main.rs"
