[package]
name = "dns-caching"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hickory-client = "0.24"
hickory-resolver = { version = "0.24", default-features = false, features = [
    "tokio-runtime",
    "system-config",
] }
