[package]
name = "prosody-config"
version = "0.1.0"
edition = "2021"
description = "Generate Prosody configuration files from type-safe Rust data structures."
readme = "README.md"
license = "MPL-2.0"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
lazy_static = { version = "1", default-features = false }
linked-hash-map = { version = "0.5", default-features = false }
linked_hash_set = { version = "0.1", default-features = false }
mime = { version = "0.3", default-features = false }
secrecy = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
serde_with = { version = "3", default-features = false, features = [
    "macros",
], optional = true }
strum = { version = "0.27", default-features = false, features = [
    "std",
    "derive",
], optional = true }

[dev-dependencies]
insta = { version = "1", default-features = false }
serde_json = { version = "1", features = ["std"], default-features = false }

[features]
default = ["merge", "serde"]
merge = []
serde = [
    "dep:serde",
    "dep:serde_with",
    "dep:strum",
    "secrecy/serde",
    "linked-hash-map/serde_impl",
    "linked_hash_set/serde",
]
