[package]
name = "prose-pod-api"
version = { workspace = true }
description = "Prose Pod API server."
readme = "README.md"
license = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = false
authors = [
    "Valerian Saliou <valerian@valeriansaliou.name>",
    "Rémi Bardon <remi@remibardon.name>",
]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = [
    "macros",
    "json",
    "query",
    "tokio",
    "http2",
] }
axum-extra = { workspace = true, features = [
    "cookie",
    "query",
    "typed-header",
] }
axum-tracing-opentelemetry = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
form_urlencoded = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
http-auth-basic = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = [
    "tracing_subscriber_ext",
] }
iso8601-duration = { workspace = true, features = ["serde"] }
iso8601-timestamp = { workspace = true, features = ["serde", "std"] }
lazy_static = { workspace = true }
mime = { workspace = true }
minidom = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serdev = { workspace = true }
service = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "std"] }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true, features = ["pretty-assertions"] }
biscuit-auth = { workspace = true }
cucumber = { workspace = true, features = ["macros", "tracing"] }
figment = { workspace = true }
hickory-proto = { workspace = true }
linked-hash-map = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

[[bin]]
name = "prose-pod-api"
path = "src/main.rs"
doc = false

[lib]
name = "prose_pod_api"
path = "src/lib.rs"

[features]
default = []
test = ["service/test"]
openapi = []

[[test]]
name = "behavior"
harness = false
