[package]
name = "service"
version = { workspace = true }
edition = { workspace = true }
publish = false
license = { workspace = true }
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
base64 = { workspace = true }
biscuit-auth = { workspace = true }
chrono = { workspace = true }
email_address = { workspace = true, features = ["serde_support"] }
figment = { workspace = true, features = ["env", "toml"] }
form_urlencoded = { workspace = true }
futures = { workspace = true }
linked_hash_set = { workspace = true, features = ["serde"] }
hickory-proto = { workspace = true, features = [
    "tokio-runtime",
    "serde-config",
] }
hickory-resolver = { workspace = true, features = ["tokio-runtime"] }
hmac = { workspace = true }
iso8601-duration = { workspace = true, features = ["serde"] }
iso8601-timestamp = { workspace = true, features = ["serde", "std"] }
jid = { workspace = true }
lazy_static = { workspace = true }
lettre = { workspace = true, features = [
    "smtp-transport",
    "rustls-tls",
    "hostname",
    "builder",
] }
mime = { workspace = true }
minidom = { workspace = true }
parking_lot = { workspace = true }
prose-xmpp = { workspace = true }
prosody-config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = [
    "blocking",
    "rustls-tls",
    "json",
    "trust-dns",
] }
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
    "with-json",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
secrecy = { workspace = true, features = ["serde"] }
semver = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros", "alloc", "base64"] }
serdev = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
unicode-normalization = { workspace = true }
url = { workspace = true }
url_serde = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true, features = ["derive", "unic"] }
xmpp-parsers = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true, features = ["macros"] }
insta = { workspace = true }
figment = { version = "*", features = ["json"] }

[features]
default = []
test = []

[[test]]
name = "behavior"
harness = false
